--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 		-o-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		border-bottom: solid 1px #e4e4e4;
+/*		border-bottom: solid 1px #e4e4e4;*/
 		color: inherit;
 		text-decoration: none;
 	}
@@ -31,6 +31,7 @@
 		a:hover {
 			border-bottom-color: transparent;
 			color: /*#4a60ca*/#4a60ca !important;
+
 		}
 
 	strong, b {
@@ -114,7 +115,7 @@
 	}
 
 	.copyrights{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
-	
+
 	code {
 		background: #555;
 		border-radius: 5px;
@@ -1018,7 +1019,7 @@
 
 	#wrapper {
 		background: #fff;
-		padding-right: 23em;
+		padding-right: 20em;
 	}
 
 /* Main */
