video demo link and red color

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: /*#4a60ca*/#4a60ca !important;
+			color: /*#4a60ca*/red !important;
 
 		}
 
